--- a/api/package.json
+++ b/api/package.json
@@ -3,7 +3,24 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "algoliasearch": "^3.14.6",
+    "async": "^2.0.0-rc.5",
+    "bunyan": "^1.8.1",
+    "bunyan-winston-adapter": "^0.2.0",
+    "dotenv": "^2.0.0",
+    "fb": "^1.1.1",
+    "getstream": "^3.2.0",
+    "jsonwebtoken": "^7.0.0",
+    "keen.io": "^0.1.3",
+    "knox": "^0.9.2",
+    "mapbox-geocoding": "^0.1.4",
+    "mysql": "^2.11.0",
+    "node-uuid": "^1.4.7",
+    "restify": "^4.1.0",
+    "restify-jwt": "^0.4.0",
+    "winston": "^2.2.0"
+  },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
