--- a/app/package.json
+++ b/app/package.json
@@ -1,10 +1,12 @@
 {
   "name": "app",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "directories": {
     "doc": "docs"
+  },
+  "scripts": {
+    "start": "node ./bin/www"
   },
   "dependencies": {
     "algoliasearch": "^3.14.6",
@@ -66,9 +68,6 @@
     "webpack-babel-jest": "^1.0.4"
   },
   "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/GetStream/stream-react-example.git"
@@ -81,5 +80,6 @@
   "bugs": {
     "url": "https://github.com/GetStream/stream-react-example/issues"
   },
-  "homepage": "https://github.com/GetStream/stream-react-example#readme"
+  "homepage": "https://github.com/GetStream/stream-react-example#readme",
+  "description": ""
 }
