--- a/app/package.json
+++ b/app/package.json
@@ -9,33 +9,33 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "algoliasearch": "^3.15.0",
+    "algoliasearch": "^3.15.1",
     "axios": "^0.12.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "dotenv": "^2.0.0",
     "ejs": "~2.4.2",
-    "express": "~4.13.4",
+    "express": "~4.14.0",
     "getstream": "^3.2.0",
     "mapbox-geocoding": "^0.1.4",
     "morgan": "~1.7.0",
     "numeral": "^1.5.3",
     "react-geocoder": "^2.5.0",
     "serve-favicon": "~2.3.0",
-    "babel-cli": "^6.9.0",
+    "babel-cli": "^6.10.1",
     "babel-core": "^6.9.1",
     "babel-jest": "^12.1.0",
     "babel-loader": "^6.2.4",
-    "babel-plugin-transform-class-properties": "^6.9.1",
+    "babel-plugin-transform-class-properties": "^6.10.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-es2015-block-scoping": "^6.9.0",
+    "babel-plugin-transform-es2015-block-scoping": "^6.10.1",
     "babel-plugin-transform-es2015-constants": "^6.1.4",
     "babel-plugin-transform-runtime": "^6.9.0",
     "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
-    "body-parser": "~1.15.1",
+    "body-parser": "~1.15.2",
     "css-loader": "^0.23.1",
     "esdoc": "^0.4.7",
     "esdoc-es7-plugin": "0.0.3",
@@ -49,7 +49,7 @@
     "mock-local-storage": "^1.0.2",
     "moment": "^2.13.0",
     "nock": "^8.0.0",
-    "node-sass": "^3.7.0",
+    "node-sass": "^3.8.0",
     "react": "~15.1.0",
     "react-addons-test-utils": "^15.1.0",
     "react-dom": "^15.1.0",
@@ -60,10 +60,10 @@
     "react-router-redux": "^4.0.5",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.5.2",
-    "redux-mock-store": "^1.1.0",
-    "redux-router": "^1.0.0-beta8",
+    "redux-mock-store": "^1.1.1",
+    "redux-router": "^2.0.0",
     "redux-thunk": "^2.1.0",
-    "sass-loader": "^3.2.0",
+    "sass-loader": "^3.2.1",
     "webpack": "^1.13.1",
     "webpack-babel-jest": "^1.0.4"
   },
