Pin react deps more specific fixes #16

--- a/app/package.json
+++ b/app/package.json
@@ -52,8 +52,8 @@
     "nock": "^8.0.0",
     "node-sass": "^3.8.0",
     "react": "~15.1.0",
-    "react-addons-test-utils": "^15.1.0",
-    "react-dom": "^15.1.0",
+    "react-addons-test-utils": "~15.1.0",
+    "react-dom": "~15.1.0",
     "react-image-component": "^1.0.0",
     "react-ink": "^5.1.1",
     "react-redux": "^4.4.5",
