--- a/api/package.json
+++ b/api/package.json
@@ -16,9 +16,10 @@
     "mapbox-geocoding": "^0.1.4",
     "mysql": "^2.11.1",
     "node-uuid": "^1.4.7",
-    "raven": "^0.11.0",
+    "raven": "^1.2.0",
     "restify": "^4.1.0",
     "restify-jwt": "^0.4.0",
+    "stack-trace": "^0.0.9",
     "winston": "^2.2.0",
     "winston-mail": "^1.2.0",
     "winston-sentry": "^0.1.4"
