--- a/www/package.json
+++ b/www/package.json
@@ -6,15 +6,15 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.15.1",
+    "body-parser": "^1.17.1",
     "cookie-parser": "~1.4.3",
     "cors": "^2.7.1",
-    "debug": "~2.2.0",
-    "dotenv": "^2.0.0",
-    "ejs": "~2.4.2",
-    "express": "~4.14.0",
+    "debug": "^2.6.3",
+    "dotenv": "^4.0.0",
+    "ejs": "^2.5.6",
+    "express": "^4.15.2",
     "mailchimp": "^1.2.0",
-    "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "morgan": "^1.8.1",
+    "serve-favicon": "^2.4.1"
   }
 }
