--- a/app/package.json
+++ b/app/package.json
@@ -1,86 +1,84 @@
 {
-  "name": "app",
-  "version": "1.0.0",
-  "main": "app.js",
-  "directories": {
-    "doc": "docs"
-  },
-  "scripts": {
-    "start": "node ./bin/www"
-  },
-  "dependencies": {
-    "algoliasearch": "^3.15.1",
-    "axios": "^0.15.3",
-    "babel-cli": "^6.10.1",
-    "babel-core": "^6.9.1",
-    "babel-jest": "^19.0.0",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-transform-class-properties": "^6.10.2",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-es2015-block-scoping": "^6.10.1",
-    "babel-plugin-transform-es2015-constants": "^6.1.4",
-    "babel-plugin-transform-runtime": "^6.9.0",
-    "babel-polyfill": "^6.9.1",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-runtime": "^6.9.2",
-    "body-parser": "^1.17.1",
-    "cookie-parser": "~1.4.3",
-    "css-loader": "^0.27.3",
-    "debug": "^2.6.3",
-    "dotenv": "^4.0.0",
-    "ejs": "^2.5.6",
-    "esdoc": "^0.5.2",
-    "esdoc-es7-plugin": "0.0.3",
-    "express": "^4.15.2",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "getstream": "^3.2.0",
-    "humps": "^2.0.0",
-    "inline-environment-variables-webpack-plugin": "^1.1.0",
-    "jest-cli": "^19.0.2",
-    "jsx": "^0.9.89",
-    "jsx-loader": "^0.13.2",
-    "mapbox-geocoding": "^0.1.4",
-    "md5": "^2.1.0",
-    "mock-local-storage": "^1.0.2",
-    "moment": "^2.13.0",
-    "morgan": "^1.8.1",
-    "nock": "^9.0.9",
-    "node-sass": "^4.5.0",
-    "numeral": "^2.0.4",
-    "react": "^15.4.2",
-    "react-addons-test-utils": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-geocoder": "^2.5.0",
-    "react-image-component": "^1.0.0",
-    "react-ink": "^6.1.1",
-    "react-redux": "^5.0.3",
-    "react-router": "3.0.2",
-    "react-router-redux": "^4.0.5",
-    "react-tap-event-plugin": "^2.0.1",
-    "redux": "^3.5.2",
-    "redux-mock-store": "^1.1.1",
-    "redux-router": "^2.0.0",
-    "redux-thunk": "^2.1.0",
-    "sass-loader": "^6.0.3",
-    "serve-favicon": "^2.4.1",
-    "webpack": "^3.2.0",
-    "webpack-babel-jest": "^1.0.4"
-  },
-  "devDependencies": {},
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/GetStream/stream-react-example.git"
-  },
-  "keywords": [
-    "GetStream"
-  ],
-  "author": "Nick Parsons <nick@getstream.io>",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/GetStream/stream-react-example/issues"
-  },
-  "homepage": "https://github.com/GetStream/stream-react-example#readme",
-  "description": ""
+	"name": "app",
+	"version": "1.0.0",
+	"main": "app.js",
+	"directories": {
+		"doc": "docs"
+	},
+	"scripts": {
+		"start": "node ./bin/www"
+	},
+	"dependencies": {
+		"algoliasearch": "^3.15.1",
+		"axios": "^0.15.3",
+		"babel-cli": "^6.10.1",
+		"babel-core": "^6.9.1",
+		"babel-jest": "^19.0.0",
+		"babel-loader": "^6.2.4",
+		"babel-plugin-transform-class-properties": "^6.10.2",
+		"babel-plugin-transform-decorators-legacy": "^1.3.4",
+		"babel-plugin-transform-es2015-block-scoping": "^6.10.1",
+		"babel-plugin-transform-es2015-constants": "^6.1.4",
+		"babel-plugin-transform-runtime": "^6.9.0",
+		"babel-polyfill": "^6.9.1",
+		"babel-preset-es2015": "^6.9.0",
+		"babel-preset-react": "^6.5.0",
+		"babel-preset-stage-0": "^6.5.0",
+		"babel-runtime": "^6.9.2",
+		"body-parser": "^1.17.1",
+		"cookie-parser": "~1.4.3",
+		"css-loader": "^0.27.3",
+		"debug": "^2.6.3",
+		"dotenv": "^4.0.0",
+		"ejs": "^2.5.6",
+		"esdoc": "^0.5.2",
+		"esdoc-es7-plugin": "0.0.3",
+		"express": "^4.15.2",
+		"extract-text-webpack-plugin": "^2.1.0",
+		"getstream": "^3.2.0",
+		"humps": "^2.0.0",
+		"inline-environment-variables-webpack-plugin": "^1.1.0",
+		"jest-cli": "^19.0.2",
+		"jsx": "^0.9.89",
+		"jsx-loader": "^0.13.2",
+		"mapbox-geocoding": "^0.1.4",
+		"md5": "^2.1.0",
+		"mock-local-storage": "^1.0.2",
+		"moment": "^2.13.0",
+		"morgan": "^1.8.1",
+		"nock": "^9.0.9",
+		"node-sass": "^4.5.0",
+		"numeral": "^2.0.4",
+		"react": "^15.4.2",
+		"react-addons-test-utils": "^15.4.2",
+		"react-dom": "^15.4.2",
+		"react-geocoder": "^2.5.0",
+		"react-image-component": "^1.0.0",
+		"react-ink": "^6.1.1",
+		"react-redux": "^5.0.3",
+		"react-router": "3.0.2",
+		"react-router-redux": "^4.0.5",
+		"react-tap-event-plugin": "^2.0.1",
+		"redux": "^3.5.2",
+		"redux-mock-store": "^1.1.1",
+		"redux-router": "^2.0.0",
+		"redux-thunk": "^2.1.0",
+		"sass-loader": "^6.0.3",
+		"serve-favicon": "^2.4.1",
+		"webpack": "^3.2.0",
+		"webpack-babel-jest": "^1.0.4"
+	},
+	"devDependencies": {},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/GetStream/stream-react-example.git"
+	},
+	"keywords": ["GetStream"],
+	"author": "Nick Parsons <nick@getstream.io>",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/GetStream/stream-react-example/issues"
+	},
+	"homepage": "https://github.com/GetStream/stream-react-example#readme",
+	"description": ""
 }
