--- a/api/package.json
+++ b/api/package.json
@@ -1,44 +1,44 @@
 {
-  "name": "api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "dependencies": {
-    "algoliasearch": "^3.15.0",
-    "async": "^2.0.0-rc.6",
-    "bunyan": "^1.8.10",
-    "bunyan-winston-adapter": "^0.2.0",
-    "fb": "^1.1.1",
-    "getstream": "^3.2.0",
-    "jsonwebtoken": "^7.0.0",
-    "keen.io": "^0.1.3",
-    "knox": "^0.9.2",
-    "mapbox-geocoding": "^0.1.4",
-    "mysql": "^2.11.1",
-    "node-uuid": "^1.4.7",
-    "raven": "^1.2.0",
-    "restify": "^4.1.0",
-    "restify-jwt": "^0.4.0",
-    "stack-trace": "^0.0.9",
-    "winston": "^2.2.0",
-    "winston-mail": "^1.2.0",
-    "winston-sentry": "^0.1.4"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/GetStream/stream-react-example.git"
-  },
-  "keywords": [
-    "GetStream"
-  ],
-  "author": "Nick Parsons <nick@getstream.io>",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/GetStream/stream-react-example/issues"
-  },
-  "homepage": "https://github.com/GetStream/stream-react-example#readme"
+	"name": "api",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"dependencies": {
+		"algoliasearch": "^3.24.3",
+		"async": "^2.5.0",
+		"bunyan": "^1.8.12",
+		"bunyan-winston-adapter": "^0.2.0",
+		"fb": "^2.0.0",
+		"getstream": "^3.5.0",
+		"jsonwebtoken": "^7.4.3",
+		"keen.io": "^0.1.3",
+		"knox": "^0.9.2",
+		"mapbox-geocoding": "^0.1.4",
+		"mysql": "^2.14.1",
+		"node-uuid": "^1.4.8",
+		"raven": "^2.1.2",
+		"restify": "^5.2.0",
+		"restify-jwt": "^0.4.0",
+		"stack-trace": "^0.0.10",
+		"winston": "^2.3.1",
+		"winston-mail": "^1.3.0",
+		"winston-sentry": "^0.2.1"
+	},
+	"devDependencies": {},
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/GetStream/stream-react-example.git"
+	},
+	"keywords": [
+		"GetStream"
+	],
+	"author": "Nick Parsons <nick@getstream.io>",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/GetStream/stream-react-example/issues"
+	},
+	"homepage": "https://github.com/GetStream/stream-react-example#readme"
 }
