--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
 		"raven": "^2.1.2",
 		"restify": "^5.2.0",
 		"restify-jwt": "^0.4.0",
+		"restify-plugins": "^1.6.0",
 		"stack-trace": "^0.0.10",
 		"winston": "^2.3.1",
 		"winston-mail": "^1.3.0",
