--- a/www/package.json
+++ b/www/package.json
@@ -5,6 +5,9 @@
 	"scripts": {
 		"start": "node ./bin/www"
 	},
+	"engines": {
+		"node": "8.x"
+	},
 	"dependencies": {
 		"body-parser": "^1.17.2",
 		"cookie-parser": "~1.4.3",
